--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
-   "id": "f8a1e1df",
+   "execution_count": 261,
+   "id": "905ccb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "id": "0b5f297f",
+   "execution_count": 262,
+   "id": "5515bacb",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 93.0.4577\n",
       "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/oi/.wdm/drivers/chromedriver/mac64/93.0.4577.15/chromedriver] found in cache\n"
+      "Get LATEST driver version for 93.0.4577\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/93.0.4577.15/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/oi/.wdm/drivers/chromedriver/mac64/93.0.4577.15]\n"
      ]
     }
    ],
@@ -41,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "id": "e191249a",
+   "execution_count": 263,
+   "id": "42712792",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "id": "b8b12c81",
+   "execution_count": 264,
+   "id": "ec23b4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "id": "f43a9714",
+   "execution_count": 265,
+   "id": "0295e45a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Join NASA for the Launch of the Mars 2020 Perseverance Rover</div>"
+       "<div class=\"content_title\">NASA's Mars Rover Drivers Need Your Help</div>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "id": "bd04c261",
+   "execution_count": 266,
+   "id": "2d32391e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Join NASA for the Launch of the Mars 2020 Perseverance Rover'"
+       "\"NASA's Mars Rover Drivers Need Your Help\""
       ]
      },
-     "execution_count": 243,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "id": "3bee050d",
+   "execution_count": 267,
+   "id": "f8c47855",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'No matter where you live, choose from a menu of activities to join NASA as we \"Countdown to Mars\" and launch the Perseverance rover to the Red Planet.'"
+       "'Using an online tool to label Martian terrain types, you can train an artificial intelligence algorithm that could improve the way engineers guide the Curiosity rover.'"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e7f323",
+   "id": "e5b11d9b",
    "metadata": {},
    "source": [
     "### JPL Space Images Featured Image"
@@ -155,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "id": "8ca79a23",
+   "execution_count": 268,
+   "id": "62497571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "id": "07b87091",
+   "execution_count": 269,
+   "id": "0bd1d310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "a7e55d18",
+   "execution_count": 270,
+   "id": "cb4bf71e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "7a14ff46",
+   "execution_count": 271,
+   "id": "71984358",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,17 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "1fa4e0c6",
+   "execution_count": 272,
+   "id": "637879c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2abd603c",
+   "id": "2c338e09",
    "metadata": {},
    "source": [
     "### Mars Facts"
@@ -247,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "7a47d206",
+   "execution_count": 273,
+   "id": "b6c07225",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +335,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "id": "e32f3581",
+   "execution_count": 274,
+   "id": "a1f5290f",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +360,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "c5c6efd8",
+   "execution_count": 275,
+   "id": "726bba0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a7e3c1",
+   "id": "1edfc56a",
    "metadata": {},
    "source": [
     "## Challenge 10. "
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8050a7",
+   "id": "999488be",
    "metadata": {},
    "source": [
     "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5cd28d3",
+   "id": "cfdb63a9",
    "metadata": {},
    "source": [
     "### Hemispheres"
@@ -403,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "29cca1ce",
+   "execution_count": 276,
+   "id": "84fbc362",
    "metadata": {},
    "outputs": [
     {
@@ -428,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "608257d4",
+   "execution_count": 277,
+   "id": "396934d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "id": "531df404",
+   "execution_count": 278,
+   "id": "f5747224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +471,7 @@
     "    # hemisphere_page = hemisphere_url.get('href')\n",
     "    # Crate a link of the page\n",
     "    # hemisphere_link = url + hemisphere_page\n",
-    "    # Visite it and parse it to Retrieve the data\n",
+    "    # Visit it and parse it to Retrieve the data\n",
     "    # browser.visit(hemisphere_link)    \n",
     "    # html = browser.html\n",
     "    # hemispheres = soup(html, 'html.parser')\n",
@@ -496,8 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "id": "291a2890",
+   "execution_count": 279,
+   "id": "20ab7336",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +515,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "id": "2400bebb",
+   "execution_count": 280,
+   "id": "b05ea179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,8 +538,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "id": "7f595dfc",
+   "execution_count": 281,
+   "id": "a062af3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "3c23adf1",
+   "execution_count": 282,
+   "id": "d0715744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,8 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "id": "d9cfcbc3",
+   "execution_count": 284,
+   "id": "2feb7117",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +569,7 @@
       "[TerminalIPythonApp] WARNING | Subcommand `ipython nbconvert` is deprecated and will be removed in future versions.\n",
       "[TerminalIPythonApp] WARNING | You likely want to use `jupyter nbconvert` in the future\n",
       "[NbConvertApp] Converting notebook Mission_to_Mars_Challenge.ipynb to script\n",
-      "[NbConvertApp] Writing 4833 bytes to Mission_to_Mars_Challenge.py\n"
+      "[NbConvertApp] Writing 4832 bytes to Mission_to_Mars_Challenge.py\n"
      ]
     }
    ],
@@ -578,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190172fe",
+   "id": "feaf2414",
    "metadata": {},
    "outputs": [],
    "source": []
